challenge10/webnodb-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webnodb
  namespace: mboukraa
  labels:
    app: webnodb
spec:
  replicas: 1
  selector:
    matchLabels:
      app: webnodb
  template:
    metadata:
      labels:
        app: webnodb
    spec:
      containers:
      - name: webnodb
        image: meriambkrr/challenge4-flask-nodb:v1
        ports:
        - containerPort: 5000
        resources:
          requests:
            memory: "128Mi"
            cpu: "100m"
          limits:
            memory: "256Mi"
            cpu: "200m"
