challenge10/webnodb-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: webnodb-service
  namespace: mboukraa
spec:
  selector:
    app: webnodb
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
  type: ClusterIP
