challenge10/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: web-ingress
  namespace: mboukraa
spec:
  ingressClassName: nginx
  rules:
    - host: webdb.mboukraa.net4255.luxbulb.org
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: webdb
                port:
                  number: 80
    - host: webnodb.mboukraa.net4255.luxbulb.org
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: webnodb-service
                port:
                  number: 80
